--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@monorepo-template/scripts",
+  "name": "@sst-webstorm-debug/scripts",
   "version": "0.0.0",
   "type": "module",
   "dependencies": {
-    "@monorepo-template/core": "*",
+    "@sst-webstorm-debug/core": "*",
     "sst": "*"
   },
   "scripts": {
